Tue Nov 20 13:39:00 UTC 2012  Simon Massey  <Simon dot massey at prismtech dot com>

        * TAO_IDL/be/be_util.cpp:
          Remove Help message concerning -si parameter that is no longer
          accepted. (As of Sun Nov 27 18:19:18 UTC 2011  Johnny Willemsen
          the S.inl files are not generated anymore.)

Mon Nov 12 10:07:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Mon Nov 12 09:34:14 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.6 released.

Fri Nov  9 12:06:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Simple/time/Time_Client_i.cpp:
          Don't shutdown the orb, the client template already does
          that

        * examples/Simple/time/server.cpp:
          Layout changes

        * examples/Simple/Simple_util.cpp:
          Fixed memory leak

Tue Nov  6 14:06:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for ObjRefTemplate chnages

Mon Nov  5 08:25:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Cache_Entries_T.h:
          Use bool instead of CORBA::Boolean

        * tao/LocateRequest_Invocation.cpp:
        * tao/Transport.h:
        * tao/Transport_Cache_Manager_T.cpp:
        * tao/Transport_Connector.cpp:
          Const, layout, and doxygen changes

Wed Oct 31 09:09:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Root_POA.cpp:
          Updated if comparison

        * tests/CSD_Strategy_Tests/TP_Test_2/run_test.pl:
          Increased wait time for slower targets

Tue Oct 30 10:50:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Root_POA.h:
        * tao/PortableServer/Root_POA.cpp:
          Cache ORT_Adapter_Factory in the POA at creation, prevents
          a lookup when (un)registering a servant which could trigger